# F1-Race-Intelligence-Engine

./: .gitignore  Dockerfile  README.md  diag_api.py  docker-compose.yml  extracted_text.txt  f1_workflow.mmd  main.py  pyproject.toml  start.ps1
apps/api/: main.py
apps/api/routers/: agent.py  race.py  rag.py
apps/api/schemas/: race.py
apps/dashboard/: index.html  package-lock.json  package.json
apps/dashboard/src/: App.jsx  index.css
apps/dashboard/src/components/: ChatSection.jsx
apps/worker/: ingestion_worker.py
data/cache/2023/2023-03-05_Bahrain_Grand_Prix/2023-03-05_Race/: _extended_timing_data.ff1pkl  driver_info.ff1pkl  lap_count.ff1pkl  race_control_messages.ff1pkl  session_info.ff1pkl  session_status_data.ff1pkl  timing_app_data.ff1pkl  track_status_data.ff1pkl
data/cache/2024/2024-03-02_Bahrain_Grand_Prix/2024-03-02_Race/: _extended_timing_data.ff1pkl  driver_info.ff1pkl  lap_count.ff1pkl  race_control_messages.ff1pkl  session_info.ff1pkl  session_status_data.ff1pkl  timing_app_data.ff1pkl  track_status_data.ff1pkl
data/chroma/3e3d4013-bb0b-467d-9790-0ce42bb598a6/: index_metadata.pickle
data/chroma/7c0ffa5e-2b11-460a-b2c0-e6df322fe410/: index_metadata.pickle
data/ml/: training_data.csv
ml/: config.py  precompute_all.py  predictor.py  prepare_data.py  train_model.py
nlp/agents/: graph.py  tools.py
nlp/cache/: semantic_cache.py
pipelines/etl/: document_processor.py
scratch/: check_chroma.py  cleanup_results.py
storage/models/: f1_predictor.joblib  mappings.json
storage/postgres/: database.py  models.py  reset_db.py
(+399 files in other folders)
